Fix scroll transform, section overflow in firefox
(Remove useless preloading)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,11 +406,6 @@ body {
 	color: white;	
 	height: 4000px;
 }
-/* preload image masks */
-body:after {
-	display: none;
-	content: url('../img/no-fun-mask-1.png') url('../img/no-fun-mask-2.png') url('../img/no-fun-mask-3.png') url('../img/no-fun-mask-4.png') url('/assets/img/no-fun-mask-5.png') url('../img/no-fun-mask-6.png');
-}
 
 a {
 	color: white;
@@ -498,7 +493,7 @@ section {
 section {
 	width: 80%;
 	left: 10%;
-	overflow: scroll;
+	overflow: auto;
 }
 
 /* Avoid flash of perspective change by moving later sections up a bit */
